# arclib

./: CMakeLists.txt  LICENSE  README.md
include/arclib/: bitfield.h  byte.h  concepts.h  containers.h  int.h  math.h  memory.h  optvector.h  random.h  rect.h  thread.h  vec2.h  vec3.h  verify.h
source/: arclib.cpp  math.cpp  random.cpp
tests/: CMakeLists.txt  bitfield_test.cpp
tests/source/: byte_test.cpp
